[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "cli-toolkit"
dynamic = ["version"]
description = "Thread-safe Python CLI toolkit with optional Rich support and transparent ANSI fallback. Verbosity gating (0-3), timestamped multi-line output, and argparse helpers that cleanly split -h (compact memo) from --help (full documentation). NO_COLOR aware. Logging bridge to the stdlib logger. Pure-Python, stdlib only. Python 3.14+."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Olivier Pons", email = "olivier.pons@gmail.com" },
]
keywords = ["cli", "argparse", "rich", "terminal", "output", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
rich = [
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/olivierpons/cli-toolkit"
Repository = "https://github.com/olivierpons/cli-toolkit"
Issues = "https://github.com/olivierpons/cli-toolkit/issues"
Changelog = "https://github.com/olivierpons/cli-toolkit/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/cli_toolkit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_toolkit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/cli_toolkit",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (black handles it)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=cli_toolkit",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
